* Fixed shipto including all addresses (Chris T, 929)
* Fixed shipto address not showing on invoice (Chris T, 929)
* Fixed fcgi blank screens on saving/deleting warehouse (Chris T, 902)
* Fixed blank screens after New on ar/ap transactions (Chris T, 924)
* Fixed back button handling after logout (Chris T)
* Fixed Chrome and some other browsers not properly logging out (Chris T)

Changelog for 1.3.36
* Set default date for AP invoice creation to current date (Chris T)
* Removed "apply discount" from use overpayment screen (Chris T)
* Fixed tax checkbox problem when one tax id includes another (Chris T)
* Fixed update forgetting creditor (Nick P)
* Fixed invoices rounding and printing differently (Giovanni B)
* Deleted broken pricematrix check on existing rows in POS (Chris T)
* Fixing manually entered tax amounts ignored printing invoice (Chris T, 864)
* Fixing deleting gl draft via gl screen fails (Chris T, 871)
* Fixing receipts listing "to pay" for amount (Chris T, 892)
* Setting->get() now works with named keys (Chris T)
* nginx sample configurations (P. Istvan)
* Fixed unable to delete ar vouchers (Chris T)
* Fixed copy to new scrambling lines (Chris T, 923)
* Fixed improper account line handling in ar/ap trans. (Chris T, 923)

Chris T is Chris Travers
Nick P is Nick Prater
Giovanni B is Giovanni Biscuolo
P. Istvan is Pongracz Istvan

Changelog for 1.3.35
* Fixed uninitialized value warnings when cached template enabled (Chris T)
* Fixed error in logs about failed login during initial login (Chris T, 858)
* Updated gnome2 stylesheet (Pongracz I)
* Updated Hungarian translation (Pongracz I)
* Fixed is_zero error on inventory activity report (Chris T)
* Fixed bug 861, receipts saying "pay from" cash account (Chris T)
* Dropped not null requirement on zip/mail codes (Chris T, 863)
* Fixed on hold throwing http 500 errors (Chris T and Nick P, 872)
* Fixed on hold not available for ar/ap transactions (Chris T, 838)