@@ -710,8 +710,6 @@ sub save {
 
    # $form->audittrail( $dbh, "", \%audittrail );
 
-    $form->save_recurring( $dbh, $myconfig );
-
     my $rc = $dbh->commit;
 
     $rc;
