@@ -16,6 +16,8 @@ Changelog for 1.3.37
 * Fixed blank screens after New on ar/ap transactions (Chris T, 924)
 * Fixed back button handling after logout (Chris T)
 * Fixed Chrome and some other browsers not properly logging out (Chris T)
+* Added SQL-Ledger 2.8 migration script (Erik H)
+* Removed sales/purchase order recurring logic (Chris T, 888)
 
 Changelog for 1.3.36
 * Set default date for AP invoice creation to current date (Chris T)
